# Scratch-Decision-Tree-

./: README.md
decision_tree/: pyproject.toml  report.md  teste.ipynb
decision_tree/core/: criterion.py  main.py  model.py  node.py  splitter.py  tree.py
